@@ -13,9 +13,13 @@ SubDir TOP doc ;
 # These two are targets doxygen creates/use anyway
 # but are needed for jam so it can track if Doxyfile
 # was changed
-html_     = [ FDirName $(TOP) doc html ] ;
-doxyfile_ = [ FDirName $(TOP) doc Doxyfile ] ;
+html_      = [ FDirName $(TOP) doc html ] ;
+doxyfile_  = [ FDirName $(TOP) doc Doxyfile ] ;
+readmesrc_ = [ FDirName $(TOP) doc index.dox ] ;
+genreadme_ = [ FDirName $(TOP) doc genreadme ] ;
+readme_    = [ FDirName $(TOP) README ] ;
 
 MakeDocumentation $(html_) : $(doxyfile_) ;
+GenDocumentation $(readme_) : $(genreadme_) $(readmesrc_) ;
 
 #Clean distclean : $(doxyfile_) ;
