@@ -1,9 +1,7 @@
 //
 // A Front page 
 //
-
 /*! \mainpage
-
 
 \section Overview
 
