@@ -11,5 +11,6 @@ int main()
 	TEST_EQUAL(file_writeable("/xxx/fff/bbb/ggg"), false);
 	TEST_EQUAL(file_readable("/xxx/fff/bbb/ggg"), false);
 	TEST_EQUAL(file_readable("/dev/this/is/not/file"), false);
+	TEST_EQUAL(file_exists("../"), false);
 	return 0;
 }
